@@ -23,12 +23,6 @@ tags: [
 {%- endif -%}]
 
 
-# Uncomment the following if you want to ignore transactions created
-# by the server on which the shipper is installed. This option is useful
-# to remove duplicates if shippers are installed on multiple servers.
-# ignore_outgoing: true
-
-
 
 ############################# Output ############################################
 
