@@ -87,11 +87,6 @@ tags: [
   {%- endif -%}
 ]
 
-# Uncomment the following if you want to ignore transactions created
-# by the server on which the shipper is installed. This option is useful
-# to remove duplicates if shippers are installed on multiple servers.
-# ignore_outgoing: true
-
 {% if geoip_paths is not none %}
 geoip:
   paths: [
